<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="visible"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/imageViewProfile"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/profile_picture"
                    android:contentDescription="@string/profile_picture_desc"
                    android:layout_marginEnd="16dp"/>

                <TextView
                    android:id="@+id/textViewName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/birthday_label"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textViewBirthday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/birthday_value"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hometown_label"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textViewHometown"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hometown_value"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hobbies_label"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textViewHobbies"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hobbies_value"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_me_label"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textViewAboutMe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_me_value"
                    android:textSize="16sp" />
            </LinearLayout>

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:padding="16dp">

            <ImageView
                android:id="@+id/imageViewProfileConstraint"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/profile_picture"
                android:contentDescription="@string/profile_picture_desc"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_margin="16dp"/>

            <TextView
                android:id="@+id/textViewNameConstraint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="20sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="50dp"
                android:layout_margin="16dp"/>


            <TextView
                android:id="@+id/textViewBirthdayConstraint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/birthday_full"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@id/textViewNameConstraint"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_margin="16dp"/>

            <TextView
                android:id="@+id/textViewHometownConstraint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hometown_value"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@id/textViewBirthdayConstraint"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_margin="16dp"/>

            <TextView
                android:id="@+id/textViewHobbiesConstraint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hobbies_value"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@id/textViewHometownConstraint"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_margin="16dp"/>

            <TextView
                android:id="@+id/textViewAboutMeConstraint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_me_value"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@id/textViewHobbiesConstraint"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_margin="16dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

    <Button
        android:id="@+id/buttonToggleLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/switch_layout"
        android:layout_margin="16dp" />
</LinearLayout>
